# clarabel-r

./: .#README.md  .Rbuildignore  .gitignore  DESCRIPTION  DESCRIPTION_orig  LICENSE.note  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cleanup  configure  configure.win  cran-comments.md  junk.rs  update_authors.R
.github/workflows/: R-CMD-check.yaml
R/: 000-wrappers.R  clarabel-package.R  clarabel.R  doc.txt  doc.txt~  extendr-wrappers.R  sparse.R
R_orig/: clarabel-package.R  extendr-wrappers.R  sparse.R
docs/: 404.html  LICENSE-text.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docs/articles/: clarabel.html  clarabel.md  index.html  index.md
docs/news/: index.html  index.md
docs/reference/: ClarabelSolver.html  ClarabelSolver.md  clarabel-package.html  clarabel-package.md  clarabel.html  clarabel.md  clarabel_control.html  clarabel_control.md  clarabel_solver.html  clarabel_solver.md  index.html  index.md  sanitize_cone_spec.html  solver_is_update_allowed.html  solver_is_update_allowed.md  solver_solve.html  solver_solve.md  solver_status_descriptions.html  solver_status_descriptions.md  solver_update.html  solver_update.md
inst/: AUTHORS  CITATION
inst/doc/: warm-starts-cvxr.md
inst/misc/: .Rbuildignore  code_gen.R  code_gen.R~  compile.Rout  hexpic.R
inst/tinytest/: test_api_dimension.R  test_api_dimension.R~  test_basic_eq_constrained.R  test_basic_expcone.R  test_basic_genpowcone.R  test_basic_lp.R  test_basic_powcone.R  test_basic_psd.R  test_basic_qp.R  test_basic_socp.R  test_basic_unconstrained.R  test_empty_conespec.R  test_mixed_conic.R  test_presolve.R  test_psd.R  test_qp.R  test_sdp_chordal.R  test_socp.R
man/: ClarabelSolver.Rd  clarabel-package.Rd  clarabel.Rd  clarabel_control.Rd  clarabel_solver.Rd  solver_is_update_allowed.Rd  solver_solve.Rd  solver_status_descriptions.Rd  solver_update.Rd
man_orig/: clarabel-package.Rd
src/: .gitignore  Makevars  Makevars.in  Makevars.win  init.c
src/rust/: Cargo.toml  api.h  cargo_vendor_config.toml  fix_hash.R  modified_files.csv  vendor.sh  vendor.tar.xz
src/rust/src/: lib.rs
src_orig/: Makevars.win  clarabel-win.def  entrypoint.c
tests/: tinytest.R
vignettes/: clarabel.Rmd
