[package]
name = "clarabel"
version = "0.11.1"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = "0.8.13"
clarabel = {version = '0.11.1', features = [ 'sdp-r' ]}
lazy_static = "1.5.0"
regex = "1.11.2"

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery. 
# 
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
# 
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "unwind"

[patch.crates-io]
r-src = { git = "https://github.com/bnaras/r-src", rev = "03e133e1947cf96829f28bd3ebbd906391523dc2" }